--- a/yatube_web_project/templates/posts/includes/post_list.html
+++ b/yatube_web_project/templates/posts/includes/post_list.html
@@ -3,7 +3,7 @@
   <ul>
     <li>
       Author: {{ post.author.get_full_name }} 
-      <a href="{% url 'posts:profile' post.author %}">все посты пользователя</a>
+      <a href="{% url 'posts:profile' post.author %}">All user posts</a>
     </li>
     <li>
       Date: {{ post.pub_date|date:"d E Y" }}
